Fix gap between team cards + Remove bg from token metrics

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,6 @@ body {
   transition: all .45s ease;
 }
 
-
 .white-diagonal, .light-diagonal {
   position: absolute;
   left: 0;
@@ -105,7 +104,7 @@ input[name="tm"]#tm-8:checked ~ .container label[for="tm-8"] span {
 
 .tm-content-wrapper {
   border-radius: 4px;
-  border: 0 solid #0000;
+  border: 0 solid #f60;
   transition: all .125s ease;
 }
 
@@ -117,35 +116,35 @@ input[name="tm"]#tm-8:checked ~ .container label[for="tm-8"] span {
 
 input[name="tm"]#tm-1:checked ~ .container .tm-content-wrapper {
   border-width: 4rem;
-  border-color: #f60f;
+  /* border-color: #f60f; */
 }
 input[name="tm"]#tm-2:checked ~ .container .tm-content-wrapper {
   border-width: 3.5rem;
-  border-color: #f60d;
+  /* border-color: #f60d; */
 }
 input[name="tm"]#tm-3:checked ~ .container .tm-content-wrapper {
   border-width: 3rem;
-  border-color: #f60b;
+  /* border-color: #f60b; */
 }
 input[name="tm"]#tm-4:checked ~ .container .tm-content-wrapper {
   border-width: 2.5rem;
-  border-color: #f609;
+  /* border-color: #f609; */
 }
 input[name="tm"]#tm-5:checked ~ .container .tm-content-wrapper {
   border-width: 2rem;
-  border-color: #f607;
+  /* border-color: #f607; */
 }
 input[name="tm"]#tm-6:checked ~ .container .tm-content-wrapper {
   border-width: 1.5rem;
-  border-color: #f605;
+  /* border-color: #f605; */
 }
 input[name="tm"]#tm-7:checked ~ .container .tm-content-wrapper {
   border-width: 1rem;
-  border-color: #f603;
+  /* border-color: #f603; */
 }
 input[name="tm"]#tm-8:checked ~ .container .tm-content-wrapper {
   border-width: .5rem;
-  border-color: #f601;
+  /* border-color: #f601; */
 }
 
 input[name="tm"]#tm-1:checked ~ .container .tm-content:nth-child(1),
